// https://github.com/krisukox/google-flights-api/blob/main/flights/internal/urlpb/url.proto

syntax = "proto3";
package url;

option go_package = "github.com/tobyrushton/gflights/internal/pb";

enum Stops {
    NONSTOP = 0;
    STOP1 = 1;
    STOP2 = 2;
}

enum LocationType {
    UNSPECIFIED_L = 0;
    AIRPORT = 1;
    CITY = 2;
}

message Location {
    LocationType type = 1;
    string name = 2;
}

message SearchFlight {
    string date = 2;
    optional Stops stops = 5;
    repeated Location srcLocations = 13;
    repeated Location dstLocations = 14;
}

message Flight {
    string dep_code = 1;
    string date = 2;
    string dest_code = 3;
    string airline_code = 5;
    string flight_number = 6;
}

message BookingFlight {
    string date = 2;
    repeated Flight flights = 4;
    repeated Location srcLocations = 13;
    repeated Location dstLocations = 14;
}

enum Traveler {
    UNSPECIFIED_T = 0;
    ADULT = 1;
    CHILD = 2;
    INFANT_ON_LAP = 3;
    INFANT_IN_SEAT = 4;
}

enum Class {
    UNSPECIFIED_CLASS = 0;
    ECONOMY = 1;
    PREMIUM_ECONOMY = 2;
    BUSINESS = 3;
    FIRST = 4;
}


enum TripType {
    UNSPECIFIED_TRIP = 0;
    ROUND_TRIP = 1;
    ONE_WAY = 2;
}

message SearchUrl {
    repeated SearchFlight flight = 3;
    repeated Traveler travelers = 8;
    Class class = 9;
    TripType tripType = 19;
}

message BookingUrl {
    repeated BookingFlight flight = 3;
    repeated Traveler travelers = 8;
    Class class = 9;
    TripType tripType = 19;
}